<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:fontFamily="sans-serif-condensed"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/app_name" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_marginTop="104dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_add_black_24dp"
        android:elevation="6dp"
        app:background="@color/fab_color"
        android:id="@+id/fab_plus"
        app:pressedTranslationZ="12dp"
        app:layout_anchor="@+id/pager"
        app:layout_anchorGravity="bottom|right"
        android:layout_gravity="center_vertical|center_horizontal" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="145dp"
        android:src="@drawable/ic_mic_black_24dp"
        android:elevation="6dp"
        android:id="@+id/fab_newRecord"
        app:pressedTranslationZ="12dp"
        app:backgroundTint="@color/fab_color"
        android:visibility="invisible"
        android:onClick="startRecord"
        app:layout_anchor="@+id/pager"
        app:layout_anchorGravity="bottom|right"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_alignParentBottom="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/title_activity_new_record"
        android:layout_marginBottom="155dp"
        android:id="@+id/textView2"
        android:layout_alignBaseline="@+id/fab_newRecord"
        android:layout_toLeftOf="@+id/fab_newRecord"
        android:layout_toStartOf="@+id/fab_newRecord"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="60dp" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="80dp"
        android:src="@drawable/ic_mode_edit_black_24dp"
        android:elevation="6dp"
        android:id="@+id/fab_newMemo"
        app:pressedTranslationZ="12dp"
        app:backgroundTint="@color/fab_color"
        android:onClick="startMemo"
        android:visibility="invisible"
        app:layout_anchor="@+id/pager"
        app:layout_anchorGravity="bottom|right"
        android:layout_gravity="center_vertical|center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/title_activity_new_memo"
        android:id="@+id/textView"
        android:layout_marginBottom="90dp"
        android:layout_alignBottom="@+id/fab_newMemo"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="60dp" />


</android.support.design.widget.CoordinatorLayout>
